# archwin

./: CMakeLists.txt  README.md  install.ps1
include/: banner.c  banner.h  cdrom.c  cdrom.h  create_user.c  create_user.h  exec.c  exec.h  exec_command.c  exec_command.h  install_windows.c  install_windows.h  menu.c  menu.h  select_disk.c  select_disk.h  select_edition.c  select_edition.h
lib/: count_substr.c  count_substr.h
src/: main.c
